# Apple-Juice

./: README.md
Docs/: abs-guide.pdf.gpg  readme.txt
Scripts/: All_Script.sh  autologin.py.gpg  configure.py.gpg  crash_analysis.sh.gpg  host_build_run.sh.gpg  html2text.pl.gpg  invite.py.gpg  logcombiner.py.gpg  pkish.sh.gpg  slat.py.gpg  sms_working.py.gpg  stc.pl  vote.py.gpg  web_node.py
Scripts/Script_1/: crash_analysis.sh  host_build.sh  host_build_run.sh  sms.pl  sms.py  sms_working.py
Scripts/Script_2/: 1st_time_setup.sh  BR_8_0_1_SIM  all_emails.txt  all_main_script_update.sh  all_pc.txt  all_string.c  automate_all.sh  backup_all.sh  branch_out.sh  bulk_route.sh  ca.sh  cef5_logs.sh  cfpga_reboot.sh  checkoutnm_simulator.sh  cimg.sh  ckt_cmpl_run_nm.sh  clean_tempdir_from_xcc.sh  compile_xcc360g.sh  copy_cef5_to_xcc.sh  create_files.sh  creating a bundle.txt  currpkg.txt  diagp  diagpp  dir_lp_repeat.sh  distcc  distcc_hosts.sh  dtmp  dune  emsnmsinfo  expnt.sh  export_commands.sh  extra_in_parmil_current_pkg.txt  fill_config_pm.sh  gaf  gas  gat  generic_octave_script_generator.sh  get_cef5logs_from_xcc.sh  important_things.txt.sh  (+51 more)
Scripts/Script_3/Combine_Images/: create_squashfsimg.sh  mksquashfs  pip-log.txt  tmp
Scripts/Script_3/Temp/: .warning_stats.txt  node  sample.txt  sample.txt_1127  sample.txt_189  sample.txt_413  sample.txt_552  sample.txt_634  split_emails.sh  split_warnings.sh  split_warnings2.sh
Scripts/Script_3/k10/: combinedReadTemp.sh  eosTemp.sh  k10.sh  node_port  portupdown.sh  readTemp.sh
Scripts/Script_3/kernel_programming/: .hello_world.ko.cmd  .hello_world.mod.o.cmd  .hello_world.o.cmd  .mem_allocate.ko.cmd  .mem_allocate.mod.o.cmd  .mem_allocate.o.cmd  .ram_stresser.ko.cmd  .ram_stresser.mod.o.cmd  .ram_stresser.o.cmd  Makefile  hello_world.c  hello_world.ko  hello_world.mod.c  mem_allocate.c  mem_allocate.ko  mkfileprev  modules.order  ram_stresser.c  ram_stresser.ko  ram_stresser.mod.c  repeat.sh
Scripts/Script_3/kernel_programming/.tmp_versions/: hello_world.mod  mem_allocate.mod  ram_stresser.mod
Scripts/Script_3/octave/cir/: 1000Kbpscir.txt  CPU.m  DIFF.m  HWCIR.m  MEMORY.m  Unsaved Document 1  all_variables_in_one_graph.m  finput.txt  source_all_other_octave_scripts.m
Scripts/Script_3/octave/memory_mapping/: 1hall.sh  all.sh  bkpoct.m  finput.txt  generate_all.sh  input.txt  mdf.sh  mem_watch_output.txt  octave_plot.m  severy.m  update_mem_watch  ursync
Scripts/Script_3/octave/ssd/: ssd.m  ssd.ps
Scripts/Script_3/octave/temperature/: AVG_TEMP.m  all_variables_in_one_graph.m  generic_octave_script_generator.sh  source_all_other_octave_scripts.m
Scripts/Script_3/others/: allBuilds.sh  cef5_10g_ports_status.sh  my_distcc  node
Scripts/Script_3/perl/: BR602.diff  bcmHaldlog001  bcm_merg.log.bak  c.bk  clusterization.pl  combinelogs.pl  copiedsndsms.pl  copy.sh  cpfiles.pl  escape.pl  file1  generated_file  got1.sh  hh.sh  host2ip.pl  imksc.pl  initl2Svcmgrdlog001  insertfilename.pl  laf.pl  lf.pl  list_files.pl  m.bk  merged.log.bak  mksc.pl  pk.pl  result  send.pl  sndexp.pl  sndsms.pl  vote.pl  xcc_merged.log.bak
Scripts/Script_3/perl/bk_cef5/: icagentTaskdlog001  initbcmHaldlog001  initifagentdlog001  initifmgrdlog001  initl2SvcAgentdlog001  lcSsmdlog001  lcdlog001  tn_initdlog001
Scripts/Script_3/perl/bk_xcc/: chAgentdlog001  initnetdlog001  initnmdlog001  netdlog001  nmdlog001  tn_initdlog001  tn_initdlog002
Scripts/Script_3/perl/cef_logs/: initbcmHaldlog001  initl2SvcAgentdlog001  lcSsmdlog001  lcdlog001  syslog001  tn_initdlog001
Scripts/Script_3/prabhat/: cinstall  compile_dscp.sh  compile_nm.sh  diag  inst  my_distcc  node  node2  node_c  nodebcm  noder
Scripts/Script_3/prabhat/new/: cp_nm.sh  (+14 more)
Scripts/Script_3/python/: allemail.py  audio.py  autologin.py  bif.txt  file1  file2  firefox  internet_login_spectranet_without_comment.py.bak  inventory.py  invite.html  invite.py  invite2.py  logcombiner.py  login.py  login2.py  loginway2sms.py  my.py  os  pip-log.txt  strip.pl  temps1  vote.py
Scripts/Script_3/save_copy_before_experiment/: diag  gat  imksc_without_remove_duplicates.pl  imksc_without_result_dir_change.pl  iupload  siexp.sh  sim.sh  sim.sh_aug_10.sh  sim.sh_evolved_10_aug.sh  sim.sh_with_no_tag_support.sh  tj100_mc_BR_8_0_1.diff  understand.sh  upload  without_if_check_imksc.pl
Scripts/Script_3/tricky_c/: .out  a.out  banks  heart  heart.out  hellworld.c  hlw.sh  india  india.c  india.out  pi  result  time  time.out  tmp.c  tmp.out  world.c  world2.c
Scripts/Script_3/utilities_in_c/: .test_mem.ko.cmd  .test_mem.mod.o.cmd  .test_mem.o.cmd  Makefile  cache_stresser  cache_stresser.c  modules.order  ram_stress_tester.c  ram_stresser  test_mem.c  test_mem.ko  test_mem.mod.c
Scripts/Script_4/: automate_all.sh  bashrc  ca.sh  ca_maps_logs_downloader  diag  gas  iupload  logs  md5relinfo  phone  pkg_diff.sh  psm_file  sim.sh  slat  supload  tejas_nph  tejas_phone  unbound_stacktracer.pl  update_bashrc_only.sh
Scripts/Script_4/perl/: escape.pl  evolution.pl  nph.pl
Scripts/Script_4/python/: customparser.pl  send_sms_way2sms.py  web_node.py
Web_Scrapping/Work/: test.csv  test1.py
(+81 files in other folders)
