#!/usr/bin/env expect 
if {[llength $argv] <= 2} {
puts "\n++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n\
\n               Usages: node \[Node_IP\] \[Card_Slot(Optional)\]\n\
\
\n               Node_IP : 102 will be treated as 192.168.143.102\
\n                         241.244 will be treated as 192.168.241.244\
\n                         169.200.100 will be treated as 192.169.200.100\
\n                         172.124.143.102 will be Taken as complete IP as it is given.\
\
\n               Card_Slot:Give only if want to goto that card directly. If not given you will taken to node not to card.\
\n                         Script will try to get icc ip automatically.Ex:For BR_10_0_2 its 127.7.1.slot but for BR_8_0_1 its 127.1.1.slot\n
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n";
if {[llength $argv] < 1} { exit;
}
}
 # timeout -1 means infinite
    set timeout 300
    set ip_part [lindex $argv 0];
    set slot [lindex $argv 1];
#    set icc_ip_second_byte [lindex $argv 2];
    set user "guest";
    set user_pass "iltwat";
    set su_user "root";
    set su_user_pass "swtn100tj";
    set null_value "";
    set port "2023";
    set outputfile [open "cir.txt" w+]

#flexible IP addressing
#So that u can provide 102 or 241.244 or 169.143.102 or 172.124.36.102 as IP.
    regexp "(\[0-9]{1,3})?\.?(\[0-9]{1,3})?\.?(\[0-9]{1,3})?\.?(\[0-9]{1,3})?" $ip_part all first second third fourth
if { $fourth != $null_value } {
   set ip "$all"
} elseif { $third != $null_value } {
   set ip "192\.$first\.$second\.$third"
} elseif { $second != $null_value } {
   set ip "192\.168\.$first\.$second"
} elseif { $first != $null_value } {
   set ip "192\.168\.143\.$first"
} else { puts "Invalid IP"; exit; }
puts "\n\nNODE IP is $ip \n"

if {[llength $argv] == 1} {
        spawn telnet $ip $port
        set node_spawn_id $spawn_id
        expect "*login*"
        send "$user\r"
        expect "*assword*"
        send "$user_pass\r"
        expect "*>"
        send "su\r"
        expect "*assword*"
        send "$su_user_pass\r"
        expect "*#"
        send "cat /usr/sbin/tejas/version.h\r"
        expect "*#"
        send "cd \/etc\/tejas\/log\r"
        expect "*#"
		send "tail \-f /etc/tejas/log/*log00*\r"
		expect "*"
interact
}

if {[llength $argv] == 2} {
spawn telnet $ip $port
       set node_spawn_id_2 $spawn_id
       expect "*login*"
       send "$user\r"
       expect "*assword*"
       send "$user_pass\r"
       expect "*>"
       send "su\r"
       expect "*assword*"
       send "$su_user_pass\r"
       expect "*#"
send -i $node_spawn_id_2 "\
total_icc=`route|grep icc|wc -l`;echo \$total_icc;\r\
basic_icc=`route|grep icc|grep 127.\[0-1\]|wc -l`;echo \$basic_icc;\r\
special_icc=\$(( \$total_icc - \$basic_icc ))\r\
if \[ \"\$special_icc\" == \"0\" \]; then\r\
route|grep icc|grep 127\.1\r\
else\r\
route|grep icc|grep 127\.\[2-9\]\r\
fi\r\
\r"
       expect {
               -re {127\.(\S+)\.1\.[0-9]} {
               				 set icc_ip_string $expect_out(1,string)
             				 regexp "(\[0-9]{1,3})?\.?(\[0-9]{1,3})?\.?(\[0-9]{1,3})?" $icc_ip_string icc_ip_second_byte
               			      }
              } 
       send "telnet 127.$icc_ip_second_byte.1.$slot $port\r"
       expect "*login*"
       send "$user\r"
       expect "*assword*"
       send "$user_pass\r"
       send "su\r"
       expect "*assword*"
       send "$su_user_pass\r"
       expect "*#"
       send "cd \/etc\/tejas\/log\r"
       expect "# "
       send "export LD_LIBRARY_PATH=/usr/sbin/tejas/sharedobj\r"
#       send "tail \-f *log00*\r"
       expect "# "
       send "telnet 0 15000\r"
       expect "bcmHal*>"
       send "PPSUBSYS\r\n\r"
       sleep 1
       send "\r"
set lower 145
set gui_cir_value $lower
set upper 146
set counter 1
       expect "bcmHal*>"
       send "DuneShell\r"
       send " \n \r"
while {$gui_cir_value < 9000000} {
while {$gui_cir_value <= $upper && $gui_cir_value >= $lower} {
       expect "Dune*>"
       send "ppd_api metering bw_profile_add mtr_group_ndx 0 bw_profile_ndx 1 eir 4000 ebs 64 disable_eir 1 cbs 64 cir $gui_cir_value\r"
expect { 
        -re {disable_cir: (\S+).*cir: (\S+).*} {
       set hw_cir_value $expect_out(2,string)
set difference [expr {$gui_cir_value - $hw_cir_value}]
       puts $outputfile "$gui_cir_value $hw_cir_value $difference"
       send "\r"
set gui_cir_value [expr {$gui_cir_value + 1}]
            }
         "*error*" {
       puts $outputfile "$gui_cir_value 0 0"
       send "\r"
set gui_cir_value [expr {$gui_cir_value + 1}]

           }
     }
}
set decide [expr {$counter % 3}]
if { $decide == 1 } {
set lower [expr {$lower * 2}]
set upper [expr {$upper * 2}]
} else {
set lower [expr {$lower * 4}]
set upper [expr {$upper * 4}]
}

set gui_cir_value $lower
set counter [expr {$counter + 1}]
}
close $outputfile
       interact
       
}
